--- a/E-Commerce-App/src/app/app.component.html
+++ b/E-Commerce-App/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="container">
   <app-header></app-header>
-  <app-home></app-home>
-  <app-seller-auth></app-seller-auth>
+ <router-outlet></router-outlet>
 </div>
