--- a/E-Commerce-App/src/app/header/header.component.html
+++ b/E-Commerce-App/src/app/header/header.component.html
@@ -5,9 +5,9 @@
     <button >Search</button>
 </div>
 <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Seller</a></li>
-    <li><a href="#">Login</a></li>
-    <li><a href="#">Cart(0)</a></li>
+    <li><a routerLink="/">Home</a></li>
+    <li><a routerLink="/seller-auth">Seller</a></li>
+    <li><a routerLink="#">Login</a></li>
+    <li><a routerLink="#">Cart(0)</a></li>
 </ul>
 </nav>
