--- a/E-Commerce-App/src/app/seller-auth/seller-auth.component.css
+++ b/E-Commerce-App/src/app/seller-auth/seller-auth.component.css
@@ -4,3 +4,14 @@
     text-align: center;
     margin-top: 50px;
 }
+.login{
+    text-align: center;
+    margin-top: 50px;
+}
+.auth-toggle-link{
+    margin-top: 10px;
+    text-align: center;
+    color: blue;
+    cursor: pointer;
+    font-size: 15px;
+}
