--- a/E-Commerce-App/src/styles.css
+++ b/E-Commerce-App/src/styles.css
@@ -29,6 +29,12 @@ body{
 }
 .error-p{
     color: red;
+
+}
+.message-p{
+    color: green;
+    text-align: center;
+    text-decoration: solid;
 }
 
 
