--- a/E-Commerce-App/src/app/header/header.component.html
+++ b/E-Commerce-App/src/app/header/header.component.html
@@ -1,13 +1,21 @@
 <nav class="nav">
-<h1>E-COMM</h1>
-<div class="nav-search">
+<h1><a routerLink="/">E-Comm</a></h1>
+<div *ngIf="menuType==='default'" class="nav-search">
     <input type="text" placeholder="search for products"/>
     <button >Search</button>
 </div>
-<ul>
-    <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/seller-auth">Seller</a></li>
-    <li><a routerLink="#">Login</a></li>
-    <li><a routerLink="#">Cart(0)</a></li>
-</ul>
+<div [ngSwitch]="menuType">
+    <ul *ngSwitchCase="'default'">
+        <li><a routerLink="/">Home</a></li>
+        <li><a routerLink="seller-auth">Seller</a></li>
+        <li><a routerLink="#">Login</a></li>
+        <li><a routerLink="#">Cart(0)</a></li>
+    </ul>
+    <ul *ngSwitchCase="'seller'">
+        <li><a routerLink="seller-addproduct">Add Porduct</a></li>
+        <li><a routerLink="seller-home">Product List</a></li>
+        <li><a routerLink="#" (click)="logout()">Log-Out</a></li>
+        <li>{{sellerName | titlecase}}</li>
+    </ul>
+</div>
 </nav>
